[project]
name = "APIDiscovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.6"
dependencies = [
    "accelerate>=1.12.0",
    "click>=8.3.1",
    "datasets>=4.4.2",
    "einops>=0.8.1",
    "huggingface-hub>=0.36.0",
    "openai>=2.15.0",
    "protobuf>=6.33.4",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.2",
    "torch>=2.9.1",
    "transformers>=4.57.5",
]
